Update Home page

--- a/index.html
+++ b/index.html
@@ -23,9 +23,21 @@
                     <ul>
                         <div id="menu">
                             <div class="box">
-                                <li><a href="/index.html">Home</a></li>
-                                <li><a href="/bookmarks.html">Bookmarks</a></li>
-                                <li><a href="/contact.html">Contact</a></li>
+                                <div class="link-shadow">
+                                    <a href="/index.html">
+                                        <img class="img-btn" src="/img/home.svg" alt="Home">
+                                    </a>
+                                </div>
+                                <div class="link-shadow">
+                                    <a href="/bookmarks.html">
+                                        <img class="img-btn" src="/img/bookmark.svg" alt="Bookmarks">
+                                    </a>
+                                </div>
+                                <div class="link-shadow">
+                                    <a href="/contact.html">
+                                        <img class="img-btn" src="/img/mail.svg" alt="Contact">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </ul>
