--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                             <div class="box">
                                 <div class="link-shadow">
                                     <a href="/index.html">
-                                        <img class="img-btn" src="/img/home.svg" alt="Home">
+                                        <img class="img-btn" src="/img/home_purple.svg" alt="Home">
                                     </a>
                                 </div>
                                 <div class="link-shadow">
                                     <a href="/bookmarks.html">
-                                        <img class="img-btn" src="/img/bookmark.svg" alt="Bookmarks">
+                                        <img class="img-btn" src="/img/bookmark_purple.svg" alt="Bookmarks">
                                     </a>
                                 </div>
                                 <div class="link-shadow">
                                     <a href="/contact.html">
-                                        <img class="img-btn" src="/img/mail.svg" alt="Contact">
+                                        <img class="img-btn" src="/img/instagram_purple.svg" alt="Contact">
                                     </a>
                                 </div>
                             </div>
