Change nav bar and remove icon for temp

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div>
             <h1 class="center-text" id="site-name">Fiuse Code</h1>
         </div>
+        <hr>
     </header>
 
     <body>
@@ -20,26 +21,25 @@
         <div>
             <div>
                 <nav>
-                    <ul>
-                        <div id="menu">
-                            <div class="box">
-                                <div class="link-shadow">
-                                    <a href="/index.html">
-                                        <img class="img-btn" src="/img/home_purple.svg" alt="Home">
-                                    </a>
-                                </div>
-                                <div class="link-shadow">
-                                    <a href="/bookmarks.html">
-                                        <img class="img-btn" src="/img/bookmark_purple.svg" alt="Bookmarks">
-                                    </a>
-                                </div>
-                                <div class="link-shadow">
-                                    <a href="/contact.html">
-                                        <img class="img-btn" src="/img/instagram_purple.svg" alt="Contact">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+                    <ul class="menu">
+                            <li class="link-shadow menu-opt">
+                                <a href="/index.html">
+                                    Home
+                                    <!-- <img class="img-btn" src="/img/home_purple.svg" alt="Home"> -->
+                                </a>
+                            </li>
+                            <li class="link-shadow menu-opt">
+                                <a href="/bookmarks.html">
+                                    Bookmarks
+                                    <!-- <img class="img-btn" src="/img/bookmark_purple.svg" alt="Bookmarks"> -->
+                                </a>
+                            </li>
+                            <li class="link-shadow menu-opt">
+                                <a href="/contact.html">
+                                    Instagram
+                                    <!-- <img class="img-btn" src="/img/instagram_purple.svg" alt="Contact"> -->
+                                </a>
+                            </li>
                     </ul>
                 </nav>
             </div>
