nav bar upgrade

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="box2">
+    <div class="main">
         <h1>Bookmark List</h1>
 
         <section>
@@ -22,12 +22,12 @@
         </section>
 
         <h2>Secondary List</h2>
-        <a href="https://www.stackoverflow.com">Stack Overflow</a> <br>
-        <a href="https://www.wikipedia.com">Wikipedia</a> <br>
-
+        <a href="https://www.stackoverflow.com">Open Stack Overflow</a> <br>
+        <a href="https://www.wikipedia.com">Open Wikipedia</a> <br>
+        
         <hr>
-        <div id="bookmarks-home">
-            <a href="/index.html">Home</a>
+        <div class="back-margin">
+            <a class="back-btn" href="/index.html">back</a>
         </div>
     </div>
 </body>
