--- a/contact.html
+++ b/contact.html
@@ -10,18 +10,20 @@
 
 <body>
     <main>
-        <div class="box2">
+        <div class="main">
             <h1>Contact</h1>
             <div>
                 <a href="https://www.instagram.com/fiusecode/">
                     <img src="/img/fiusecode_qr.png" alt="" width="150">
                 </a>
             </div>
-        </div>
 
-        <hr>
-        <div>
-            <center><a href="/index.html">Home</a></center>
+
+            <hr>
+            <div class="back-margin">
+                <a class="back-btn" href="/index.html">back</a>
+            </div>
+
         </div>
     </main>
 </body>
