--- a/index.html
+++ b/index.html
@@ -10,39 +10,21 @@
 
 <body>
     <header>
-        <div>
-            <h1 class="center-text" id="site-name">Fiuse Code</h1>
-        </div>
+        <h1 class="main">Fiuse Code</h1>
+        <nav class="menu">
+            <ul class="list">
+                <li class="menu-opt">
+                    <a href="/index.html">Home</a>
+                </li>
+                <li class="menu-opt">
+                    <a href="/bookmarks.html">Bookmarks</a>
+                </li>
+                <li class="menu-opt">
+                    <a href="/contact.html">Instagram</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-
-    <body>
-
-        <div>
-            <nav>
-                <ul class="menu">
-                    <li class="link-shadow menu-opt">
-                        <a href="/index.html">
-                            Home
-                            <!-- <img class="img-btn" src="/img/home_purple.svg" alt="Home"> -->
-                        </a>
-                    </li>
-                    <li class="link-shadow menu-opt">
-                        <a href="/bookmarks.html">
-                            Bookmarks
-                            <!-- <img class="img-btn" src="/img/bookmark_purple.svg" alt="Bookmarks"> -->
-                        </a>
-                    </li>
-                    <li class="link-shadow menu-opt">
-                        <a href="/contact.html">
-                            Instagram
-                            <!-- <img class="img-btn" src="/img/instagram_purple.svg" alt="Contact"> -->
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-
-        </div>
-    </body>
 
     <footer>
 
