Changes to website

--- a/Pages/Home/index.html
+++ b/Pages/Home/index.html
@@ -5,22 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiuse Code</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="main">Fiuse Code</h1>
         <nav class="menu">
             <ul class="list">
                 <li class="menu-opt">
-                    <a href="/index.html">Home</a>
+                    <a href="/Pages/Home/index.html">Home</a>
                 </li>
                 <li class="menu-opt">
-                    <a href="/bookmarks.html">Bookmarks</a>
+                    <a href="https://github.com/fiusecode">Github</a>
                 </li>
                 <li class="menu-opt">
-                    <a href="/contact.html">Instagram</a>
+                    <a href="https://www.instagram.com/fiusecode/">Instagram</a>
+                </li>
+                <li class="menu-opt">
+                    <a href="/Pages/login_page/login.html">Log In</a>
                 </li>
             </ul>
         </nav>
