fix bug of home page

--- a/Pages/login_page/login.html
+++ b/Pages/login_page/login.html
@@ -13,7 +13,7 @@
 
     <header>
             <div class="back-box">
-                <a class="back-btn" href="/Pages/Home/index.html">Back</a>
+                <a class="back-btn" href="/index.html">Back</a>
             </div>
     </header>
 
