--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="menu">
             <ul class="list">
                 <li class="menu-opt">
-                    <a href="/Pages/Home/index.html">Home</a>
+                    <a href="/index.html">Home</a>
                 </li>
                 <li class="menu-opt">
                     <a href="https://github.com/fiusecode">Github</a>
